# neet-pad

./: .gitignore  Anchor.toml  index.html  package-lock.json  package.json
.github/workflows/: build-frontend.yml  deploy.yml
assets/: index-C_dp0PyM.js  index-CmB4DwQs.css
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: NavBar.jsx  TokenCard.jsx
frontend/src/idl/: deployment.json  neet_pad.json
frontend/src/pages/: CreateToken.jsx  Home.jsx  TokenPage.jsx
frontend/src/utils/: bondingCurve.js  pinata.js  program.js
programs/neet-pad/: Cargo.toml
programs/neet-pad/src/: lib.rs
scripts/: grind-neet.js  initialize.js  neet-keypair-pool.json  neet-pad-client.js  scaffold-frontend.js
tests/: neet_pad.ts
