[package]
name = "neet-pad"
version = "0.1.0"
description = "NEET PAD – Solana bonding curve launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neet_pad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang  = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.30.1", features = ["token", "associated_token"] }

# Pin TOML-ecosystem crates to edition2021 versions.
# The 1.1.0/0.25.6+ releases use edition2024 which Cargo 1.79 (bundled in Solana platform-tools) cannot parse.
# Constraining here forces resolution to skip the edition2024 manifests entirely.
[dev-dependencies]
toml_datetime = "=1.0.1"
toml_parser  = "=1.0.10"
toml_edit    = "=0.25.5"
