[package]
name = "neet-pad"
version = "0.1.0"
description = "NEET PAD – Solana bonding curve launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neet_pad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = ["token", "associated_token"] }
